# mocap_cam_handeye_calibration

./: 0_quat_to_rt.py  1_gen_dataset_all.py  2_detect_cam_pose.py  2_detect_cam_pose_with_know_intrics.py  3_solve_RT.py  4_verify_result_with_o3d.py  README.md  bug.md
example_dataset/: pose_quat.txt
ref_code/rosbag_image_save/: CMakeLists.txt  package.xml
ref_code/rosbag_image_save/src/: my_rosbag.cpp
